chore: disable ads

--- a/_config.yml
+++ b/_config.yml
@@ -177,6 +177,8 @@ footer-hover-col: "#0085A1"
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
 
+remove-ads: true
+
 # Google Tag Manager ID
 #gtm: ""
 
