--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ social-network-links:
 #  whatsapp: 15551212
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-#  linkedin: daattali
+  linkedin: thejarredroberts
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -99,7 +99,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "somebusinessidea.co.uk"
+# url-pretty: "somebusinessidea.co.uk"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
