chore: update business name

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Clifton Codeworks
+title: Clifton Cloudworks
 
 # Your name to show in the footer
 author: Jarred Roberts
