--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Clifton Cloudworks
 
 # Your name to show in the footer
-author: Jarred Roberts
+author: Clifton Cloudworks
 
 ###############################################
 # --- List of links in the navigation bar --- #
