--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "jarredroberts@outlook.com"
+  email: "hello@cliftoncloudworks.co.uk"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
 #  github: daattali
