--- a/_config.yml
+++ b/_config.yml
@@ -138,10 +138,10 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#CCFFCC" # < Green | Grey > "#EAEAEA"
+navbar-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "#CCFFCC" # < Green | Grey > "#EAEAEA" 
+footer-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA" 
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
