--- a/_config.yml
+++ b/_config.yml
@@ -139,11 +139,11 @@ text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 navbar-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA"
-navbar-text-col: "#404040"
+navbar-text-col: "#FFFFFF" # Black > "#404040"
 navbar-border-col: "#DDDDDD"
 footer-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA" 
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-text-col: "#FFFFFF" # Grey > "#777777"
+footer-link-col: "#FFFFFF" # Black > "#404040"
 footer-hover-col: "#0085A1"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
