--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social-network-links:
 #  bluesky: yourname
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
-#  discord: "invite_code" or "users/userid" or "invite/invite_code"
+  discord: "ChilledEther#6943"
 #  kaggle: yourname
 #  hackerrank: yourname
 #  gitlab: yourname
