--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social-network-links:
 #  bluesky: yourname
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
-  discord: "ChilledEther#6943"
+  discord: "215193460423000065"
 #  kaggle: yourname
 #  hackerrank: yourname
 #  gitlab: yourname
