--- a/_config.yml
+++ b/_config.yml
@@ -49,31 +49,31 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "hello@cliftoncloudworks.co.uk"
-#  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-#  facebook: deanattali
-#  github: daattali
-#  twitter: daattali
-#  patreon: DeanAttali
-#  youtube: "@daattali"
-#  whatsapp: 15551212
-#  medium: yourname
-#  reddit: yourname or r/yoursubreddit
+  #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  #  facebook: deanattali
+  #  github: daattali
+  #  twitter: daattali
+  #  patreon: DeanAttali
+  #  youtube: "@daattali"
+  #  whatsapp: 15551212
+  #  medium: yourname
+  #  reddit: yourname or r/yoursubreddit
   linkedin: thejarredroberts
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-#  bluesky: yourname
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
+  #  xing: yourname
+  #  stackoverflow: "3943160/daattali"
+  #  snapchat: deanat78
+  #  instagram: deanat78
+  #  spotify: yourname
+  #  telephone: +14159998888
+  #  steam: deanat78
+  #  twitch: yourname
+  #  yelp: yourname
+  #  telegram: yourname
+  #  calendly: yourname
+  #  mastodon: instance.url/@username
+  #  bluesky: yourname
+  #  ORCID: your ORCID ID
+  #  google-scholar: your google scholar
   discord: "215193460423000065"
 #  kaggle: yourname
 #  hackerrank: yourname
@@ -141,7 +141,7 @@ hover-col: "#0085A1"
 navbar-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA"
 navbar-text-col: "#FFFFFF" # Black > "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA" 
+footer-col: "#6A89A7" # < Blue-grey | Grey > "#EAEAEA"
 footer-text-col: "#FFFFFF" # Grey > "#777777"
 footer-link-col: "#FFFFFF" # Black > "#404040"
 footer-hover-col: "#0085A1"
@@ -271,35 +271,29 @@ kramdown:
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
+      comments: true # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
-  -
-    scope:
+  - scope:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
 
 # Exclude these files from production site
 exclude:
-  - CHANGELOG.md
   - CNAME
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - README.md
-  - screenshot.png
-  - docs/
 
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
